Fix missing cite shortcodes

--- a/content/1-history/1.md
+++ b/content/1-history/1.md
@@ -39,7 +39,7 @@ Long-term mechanical behavior, such as relaxation and creep, have also been meas
 
 {% figure 'fig-1-2' %}
 
-The use of biaxial stretching, first proposed by Berger ({Berger and Russell 2000}), and electronic speckle pattern interferometry (ESPI) for strain measurement ([fig. 1.3](#fig-1-3)) enabled Young and Hibberd to look in further detail at conservation issues and lining practice, such as the strain associated with stretcher attachments ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). The complex structure of stretched canvas is now understood in sufficient detail to consider computer modeling of the mechanical properties of both paintings and linings. It also offers the opportunity to study in more detail the effects of minimal treatments on more contemporary paintings ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). Temporary solutions and physical protection may prove to be our best options, but many have not yet been fully assessed objectively.
+The use of biaxial stretching, first proposed by Berger ({% cite 'Berger and Russell 2000' %}), and electronic speckle pattern interferometry (ESPI) for strain measurement ([fig. 1.3](#fig-1-3)) enabled Young and Hibberd to look in further detail at conservation issues and lining practice, such as the strain associated with stretcher attachments ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). The complex structure of stretched canvas is now understood in sufficient detail to consider computer modeling of the mechanical properties of both paintings and linings. It also offers the opportunity to study in more detail the effects of minimal treatments on more contemporary paintings ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). Temporary solutions and physical protection may prove to be our best options, but many have not yet been fully assessed objectively.
 
 {% figure 'fig-1-3' %}
 
