--- a/content/1-history/3.md
+++ b/content/1-history/3.md
@@ -61,7 +61,7 @@ The more recent part of the literature review, through the 1970s, was easier, as
 
 Examination of the thesis painting, the literature review, and my considerations resulted in a treatment proposal that was primarily based on treatment philosophy and techniques related to Mehra and Hacke—their publications as well as the lectures and workshops with Hacke.
 
-The alternative “low-pressure table” equipment to be used, the “lamination” adhesives and technique, and the underlying philosophy rested on a new approach that Mehra and Hacke shared to a considerable degree, but not entirely. There were significant differences between the two, and it is interesting to compare Mehra’s statements (treatment options) from 1972 (see [Andersen in this publication](/3-open-questions/21/)) and his subsequent publications in the 1970s with Hacke’s statements published during the same decade ({% cite 'Hacke 1976' %}; {% cite 'Hacke 1978' %}), and compiled in 1979 ([fig. 3.1](#fig-3-1); [table 3.1](#table-3-1)). The second column of table 3.1 presents a set of options for proper lining treatment that came out of a seminar Hacke held at the School of Conservation in September 1979. The list was compiled by the students based on the seminar and Hacke’s previous publications ({Hacke 1976}; {Hacke 1978}).
+The alternative “low-pressure table” equipment to be used, the “lamination” adhesives and technique, and the underlying philosophy rested on a new approach that Mehra and Hacke shared to a considerable degree, but not entirely. There were significant differences between the two, and it is interesting to compare Mehra’s statements (treatment options) from 1972 (see [Andersen in this publication](/3-open-questions/21/)) and his subsequent publications in the 1970s with Hacke’s statements published during the same decade ({% cite 'Hacke 1976' %}; {% cite 'Hacke 1978' %}), and compiled in 1979 ([fig. 3.1](#fig-3-1); [table 3.1](#table-3-1)). The second column of table 3.1 presents a set of options for proper lining treatment that came out of a seminar Hacke held at the School of Conservation in September 1979. The list was compiled by the students based on the seminar and Hacke’s previous publications ({% cite 'Hacke 1976' %}; {% cite 'Hacke 1978' %}).
 
 {% figure 'fig-3-1' %}
 
