--- a/content/3-open-questions/15.md
+++ b/content/3-open-questions/15.md
@@ -154,7 +154,7 @@ I would like to thank Tim Green, retired Paintings Conservator, Tate; Dean Yoder
 
 {% endbackmatter %}
 
-[^1]: For an up-to-date, comprehensive review of the published research in the conservation field, see Stephen Hackney’s *On Canvas: Preserving the Structure of Paintings* ({Hackney 2020}).
+[^1]: For an up-to-date, comprehensive review of the published research in the conservation field, see Stephen Hackney’s *On Canvas: Preserving the Structure of Paintings* ({% cite 'Hackney 2020' %}).
 
 [^2]: See <https://www.npg.org.uk/research/programmes/directory-of-suppliers/>.
 
