--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -142,7 +142,7 @@ Pure nanocellulose treatments (solution 1) form a thin layer of a few microns on
 
 {% figure 'fig-27-2' %}
 
-Multilayered NPs sprayed onto degraded cotton canvases tend to be homogeneously distributed across the surface of the canvas’s fibers and to form homogeneous monolayers ({Kolman et al. 2018}). Interfibrillar bridges made of dense agglomerate of NPs were also observed by SEM (red arrows in fig. 27.2, solution 3) and could participate in the consolidation by locking the fibrous structure. Kolman et al. also observed the high penetration achieved for the NPs using micro- X-ray fluorescence but stressed the role of the viscosity as a limiting factor ({Kolman et al. 2018}). For concentrations above 4.5% w/w in water, the NPs remained on the canvas surface.
+Multilayered NPs sprayed onto degraded cotton canvases tend to be homogeneously distributed across the surface of the canvas’s fibers and to form homogeneous monolayers ({% cite 'Kolman et al. 2018' %}). Interfibrillar bridges made of dense agglomerate of NPs were also observed by SEM (red arrows in fig. 27.2, solution 3) and could participate in the consolidation by locking the fibrous structure. Kolman et al. also observed the high penetration achieved for the NPs using micro- X-ray fluorescence but stressed the role of the viscosity as a limiting factor ({% cite 'Kolman et al. 2018' %}). For concentrations above 4.5% w/w in water, the NPs remained on the canvas surface.
 
 ## Consolidation
 
@@ -202,7 +202,7 @@ This study was cofunded by H2020 Nanorestart European Project (grant 646063) and
 
 The CNF was produced from softwood pulp (\~75% pine and 25% spruce, containing 85% cellulose, 15% hemicellulose, and traces of lignin, as determined by the supplier). Carboxymethylated CNF (CCNF), also in the form of an aqueous suspension, was kindly provided by Research Institutes of Sweden (RISE) Bioeconomy (Sweden). The CCNF was produced from a softwood sulfite dissolving pulp (Domsjö Dissolving Plus, Domsjö Fabriker AB, Sweden) by carboxymethylation, as described by others ({% cite 'Wågberg and Bjőrklund 1993' %}), followed by mechanical fibrillation. Nanocrystalline cellulose (CNC) in powder form was purchased from CelluForce (Canada). It was produced from bleached kraft pulp by sulfuric acid hydrolysis.
 
-The nanocomposites are made of a mixture of Tylose MH (methyl hydroxyethyl cellulose), purchased from Shin-Etsu Chemical Co. (Japan), and cellulose nanocrystals (CelluForce NCC), obtained from CelluForce. For the heptane-based MC+CNC, hydrophobic groups were introduced by silylation ({Böhme et al. 2020}). The deacidification agents consist of calcium carbonate and magnesium oxide particles of less than 1 µm.
+The nanocomposites are made of a mixture of Tylose MH (methyl hydroxyethyl cellulose), purchased from Shin-Etsu Chemical Co. (Japan), and cellulose nanocrystals (CelluForce NCC), obtained from CelluForce. For the heptane-based MC+CNC, hydrophobic groups were introduced by silylation ({% cite 'Böhme et al. 2020' %}). The deacidification agents consist of calcium carbonate and magnesium oxide particles of less than 1 µm.
 
 Other research details preparation of the SNPs ({% cite 'Kolman et al. 2018' %}) and CaNPs ({% cite 'Xu et al. 2020' %}) and their mixture ({% cite 'Palladino et al. 2020' %}).
 
