--- a/content/6-interventions/31.md
+++ b/content/6-interventions/31.md
@@ -42,7 +42,7 @@ abstract: "Structural damage to a canvas, such as tears, presents unique problem
 
 ## Introduction
 
-In the field of painting conservation, there are long-established treatment techniques for addressing structural repairs, such as tears in the canvas support. These techniques range from more invasive treatments, such as linings ({% cite 'Bailey 2017' %}; {% cite 'Berger 1974' %}; {% cite 'Berger 1975' %}; {% cite 'Bernstein 1974' %}; {% cite 'Fieux 1974' %}; {:Goist 1977]]; {% cite 'Levenson 1974' %}; {% cite 'Slabczynski 1960' %}; {% cite 'Stoner 1994' %}; {% cite 'Wales 1968' %}) to less invasive treatments, such as patches and localized thread-by-thread repairs ({% cite 'Barnett 1992' %}; {% cite 'Bustin 2003' %}; {% cite 'Heiber 2003' %}; {% cite 'Piotrowska and Amann 2009' %}; {% cite 'Proctor 1994' %}). After the 1974 Greenwich conference ({% cite 'Villers 2003b' %}), there was a shift in thought away from invasive techniques and an effort to devise less-invasive techniques ({% cite 'Hackney 2004a' %}; {% cite 'Keck 1977' %}).
+In the field of painting conservation, there are long-established treatment techniques for addressing structural repairs, such as tears in the canvas support. These techniques range from more invasive treatments, such as linings ({% cite 'Bailey 2017' %}; {% cite 'Berger 1974' %}; {% cite 'Berger 1975' %}; {% cite 'Bernstein 1974' %}; {% cite 'Fieux 1974' %}; {% cite 'Goist 1977' %}; {% cite 'Levenson 1974' %}; {% cite 'Slabczynski 1960' %}; {% cite 'Stoner 1994' %}; {% cite 'Wales 1968' %}) to less invasive treatments, such as patches and localized thread-by-thread repairs ({% cite 'Barnett 1992' %}; {% cite 'Bustin 2003' %}; {% cite 'Heiber 2003' %}; {% cite 'Piotrowska and Amann 2009' %}; {% cite 'Proctor 1994' %}). After the 1974 Greenwich conference ({% cite 'Villers 2003b' %}), there was a shift in thought away from invasive techniques and an effort to devise less-invasive techniques ({% cite 'Hackney 2004a' %}; {% cite 'Keck 1977' %}).
 
 The development of the thread-by-thread tear mending technique, published by Winfried Heiber ({% cite 'Heiber 2003' %}; {% cite 'Proctor 1994' %}), enabled a new phase of less-invasive treatments of structural repairs in painting conservation, which were more sympathetic to the canvas, did not alter the surface appearance of a painting, recreated the aesthetic properties of the canvas, and were reversible. Heiber’s technique involves the retwining of the torn and splayed threads and then reintegrating them into the weave matrix to reestablish the overall tension of the canvas in the torn and damaged area. It is well established that a fluctuating environment causes the canvas fibers to swell and contract ({% cite 'Cornelius 1967' %}), placing stress on the canvas, paint layers, and any structural damage and repairs ({% cite 'Berger and Russell 1990' %}). The theory behind Heiber’s repairs is that when individual fibers are reconnected, the integrity of the canvas is restored, and the whole canvas responds uniformly to environmental fluctuations; this in turn reduces localized stress on the mend.
 
