--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -150,7 +150,7 @@ Seeking to implement a minimal structural intervention respectful of the aesthet
 
 [^11]: For example, Filippo Lauri, *Festone* (inventory 1934), or the *Landscape* by an anonymous artist (inventory 2232), both from the end of the seventeenth century.
 
-[^12]: There are many references to Michelini working for the most important Roman families; see, for example, {% cite 'Debenedetti 2004' %}; {% cite 'Debenedetti 2005' %}; {% cite 'Bodart 1970' %}; {% cite 'Ghezzi 1744' %}; letter from L. Crespi to Francesco Algarotti ({% cite 'Bottari 1822–25' '419' %}); {% cite 'Nougaret and Leprince 1776' '66, 143' %}; and {% cite 'Standring 1988' '608–26, particularly 621 and 624' %}. For a more complete study, with all the biographical notes, see {% cite 'Marinetti 2007' %}. All the works for the Pamphili are cited in {De Marchi 2016}. In the Palazzo della Cancelleria, he worked with Ventura Lamberti, Benefial’s teacher. For the Ruspoli family, he prepared the canvas for Trevisani to paint a Saint Francis. For the Giustiniani, he restored the first version of Caravaggio’s *Saint Matthew.* For the Pellegrini church, he cleaned Reni’s *Trinity* and repaired a panel painted by the Cavalier d’Arpino (*Madonna, Saint Francesco, and Saint Agostino*). For San Giovanni dei Fiorentini, he worked on Maratti’s copy of the *Madonna and Saints.* The Albani family introduced him at the Savoy court. Poerson, director of the French Academy in Rome and president of the Academy of Saint Luke, tells of his restoration for the Odescalchi family, together with B. Luti. Finally, he worked also for the Corsini and the Soderini, being the most important restorer of his time in Rome.
+[^12]: There are many references to Michelini working for the most important Roman families; see, for example, {% cite 'Debenedetti 2004' %}; {% cite 'Debenedetti 2005' %}; {% cite 'Bodart 1970' %}; {% cite 'Ghezzi 1744' %}; letter from L. Crespi to Francesco Algarotti ({% cite 'Bottari 1822–25' '419' %}); {% cite 'Nougaret and Leprince 1776' '66, 143' %}; and {% cite 'Standring 1988' '608–26, particularly 621 and 624' %}. For a more complete study, with all the biographical notes, see {% cite 'Marinetti 2007' %}. All the works for the Pamphili are cited in {% cite 'De Marchi 2016' %}. In the Palazzo della Cancelleria, he worked with Ventura Lamberti, Benefial’s teacher. For the Ruspoli family, he prepared the canvas for Trevisani to paint a Saint Francis. For the Giustiniani, he restored the first version of Caravaggio’s *Saint Matthew.* For the Pellegrini church, he cleaned Reni’s *Trinity* and repaired a panel painted by the Cavalier d’Arpino (*Madonna, Saint Francesco, and Saint Agostino*). For San Giovanni dei Fiorentini, he worked on Maratti’s copy of the *Madonna and Saints.* The Albani family introduced him at the Savoy court. Poerson, director of the French Academy in Rome and president of the Academy of Saint Luke, tells of his restoration for the Odescalchi family, together with B. Luti. Finally, he worked also for the Corsini and the Soderini, being the most important restorer of his time in Rome.
 
 [^13]: “Signor Domenico Michelini raccomodatore di quadri, che abita in Campo Marzio, è nel suo mestiere bravissimo ma non sa dipingere, ma per ritirarli e ripulirli non ha l’eguale et anche è buonissimo huomo, et à un figliolo che si porta assai bene nel medesimo mestiere. Et io cavaliere Ghezzi ne ho lassata la memoria il 16 luglio 1744” (Domenico Michelini, paintings restorer, who lives in Campo Marzio, is excellent in his work but he cannot paint; but for the restretching and cleaning of a painting he has no equal. He is also a good man, and he has a son who is also very good in the same line of work. And I, Ghezzi, I have left this testimony, July 16, 1744” ({% cite 'Ghezzi 1744' %}, cited in {% cite 'Marinetti 2007' '34–35' %}).
 
