--- a/content/6-interventions/37.md
+++ b/content/6-interventions/37.md
@@ -44,7 +44,7 @@ The execution of traditional flour-paste or wax-resin linings requires elevated 
 
 This lack of steadiness is even more problematic when the conservator attempts to heat a larger area with sweeping movement of the iron, which necessitates the set temperature to be considerably higher than the desired surface temperature. Furthermore, most hand irons are designed for household textiles, and therefore have operational parameters between 120ºC and 180ºC, far above the safe, low-energy range needed for painting materials. Other temperature controls, such as rheostats, measure energy output and are not corrected by local temperature readings, so the actual surface temperature is unknown.
 
-The primacy of lining as the most significant structural remediation method motivated conservators in the mid-to-late twentieth century to develop custom-fabricated hot tables to overcome the difficulties of heating a larger surface area than possible with a hand iron. The earliest of these were guided by the desire to improve impregnation at 65ºC or higher when performing the prevailing method of wax-resin lining ({% cite 'Ruhemann 1953' '73' %}; {P{lenderleith 1956\|, 169]]; {% cite 'Bomford 2003' %}; {% cite 'Rees Jones, Cummings, and Hedley 2003' %}; {% cite 'Berger and Zeliger 2003' 'v–ix' %}; {% cite 'Ackroyd 2002' %}; {% cite 'Falvey 2008' %}). Refinements were made to the design of multipurpose heating tables from the 1980s on, to be used in combination with thermoplastic synthetic adhesives for linings that are activated at 65ºC. Nonetheless, many heating tables lack uniformity in heat transfer over the table surface area, which is easily identified by thermal imaging cameras, and users come to know the idiosyncratic hot and cold spots present on their device ({% cite 'Olsson and Markevičius 2010' %}).
+The primacy of lining as the most significant structural remediation method motivated conservators in the mid-to-late twentieth century to develop custom-fabricated hot tables to overcome the difficulties of heating a larger surface area than possible with a hand iron. The earliest of these were guided by the desire to improve impregnation at 65ºC or higher when performing the prevailing method of wax-resin lining ({% cite 'Ruhemann 1953' '73' %}; {% cite 'Plenderleith 1956' '169' %}; {% cite 'Bomford 2003' %}; {% cite 'Rees Jones, Cummings, and Hedley 2003' %}; {% cite 'Berger and Zeliger 2003' 'v–ix' %}; {% cite 'Ackroyd 2002' %}; {% cite 'Falvey 2008' %}). Refinements were made to the design of multipurpose heating tables from the 1980s on, to be used in combination with thermoplastic synthetic adhesives for linings that are activated at 65ºC. Nonetheless, many heating tables lack uniformity in heat transfer over the table surface area, which is easily identified by thermal imaging cameras, and users come to know the idiosyncratic hot and cold spots present on their device ({% cite 'Olsson and Markevičius 2010' %}).
 
 From the 1970s to the 1990s, various low-pressure envelope methods were combined with infrared lamps for heat transfer ({% cite 'Hedley, Hackney, and Cummings 2003' %})—or even heat guns—with the inevitable obstacles to accuracy and control, although these methods also aimed to achieve the customary 65ºC heat-activation temperatures for synthetic thermoplastic consolidating and lining adhesives. These large, costly devices do not resonate with the fundamental shift in conservation methodology to prioritize targeted, minimally invasive treatments, today performed by conservators rather than specialized reliners. The application of heat transfer expanded to localized remedial treatments, such as tear mending, consolidation, stabilization of cracked and lifted paint, and reduction of diverse deformations and planar distortions. In the absence of alternatives, these treatments are performed with spatulas and tacking and hand irons ({% cite 'Olsson and Markevičius 2010' %}).
 
