--- a/content/7-modern-contemporary/38.md
+++ b/content/7-modern-contemporary/38.md
@@ -107,4 +107,4 @@ Structural treatment of modern and contemporary canvas paintings presents both t
 
 [^1]: Daniel Goldreyer was in private practice, active from approximately 1950 to 1995. Orrin Riley was at the Guggenheim Museum and in private practice from about 1960 to 1986. Jean Volkmer was at the Museum of Modern Art, circa 1958 to 1983. Margaret Watherston was at the Whitney Museum of American Art and in private practice, from around 1965 to 2005.
 
-[^2]: For a foundational overview of modern paints, see {Learner 2004}. For a brief summary of cleaning research, see {% cite 'Ormsby and Learner 2016' %}.
+[^2]: For a foundational overview of modern paints, see {% cite 'Learner 2004' %}. For a brief summary of cleaning research, see {% cite 'Ormsby and Learner 2016' %}.
