--- a/content/8-posters/61.md
+++ b/content/8-posters/61.md
@@ -22,7 +22,7 @@ abstract: "This case study discusses the extent of damage caused by termite atta
 
 ## Introduction
 
-Victoria Memorial Hall, in Kolkata, India, holds a vast collection of important historical artifacts and documents from the British Colonial period (eighteenth and nineteenth centuries) and houses one of the largest collections of Western oil paintings in India. One of the museum[’]{dir="rtl"}s major galleries is the Royal Gallery, which displays the large-scale painting *The State Entry into Delhi by Lord and Lady Curzon, Delhi Durbar (1903)* by Roderick Dempster MacKenzie (1865–1941) ([fig. 61.1](#fig-61-1)). The conservation of this painting is of paramount importance to the museum and its staff.
+Victoria Memorial Hall, in Kolkata, India, holds a vast collection of important historical artifacts and documents from the British Colonial period (eighteenth and nineteenth centuries) and houses one of the largest collections of Western oil paintings in India. One of the museum’s major galleries is the Royal Gallery, which displays the large-scale painting *The State Entry into Delhi by Lord and Lady Curzon, Delhi Durbar (1903)* by Roderick Dempster MacKenzie (1865–1941) ([fig. 61.1](#fig-61-1)). The conservation of this painting is of paramount importance to the museum and its staff.
 
 {% figure 'fig-61-1' %}
 
@@ -30,7 +30,7 @@ A longstanding collaboration among experts in the structural conservation of pai
 
 ## Historical Background of *Delhi Durbar 1903*
 
-The term *durbar* was used in Mughal India to refer to a meeting of the ruler[’]{dir="rtl"}s court or council; it was adopted by the British to refer to a ceremonial gathering that demonstrated loyalty to the crown.[^1] The painting that is the subject of the case study depicts the second such occasion; a previous Durbar was held in 1877 to proclaim Queen Victoria Empress of India. Following Victoria’s death in 1901, the 1903 Durbar marked the declaration of Edward VII and Queen Alexandra as Emperor and Empress of India. Though the royal couple did not attend the ceremony, they were represented by Edward’s brother, the Duke of Connaught, seen riding on the second elephant in the scene.
+The term *durbar* was used in Mughal India to refer to a meeting of the ruler’s court or council; it was adopted by the British to refer to a ceremonial gathering that demonstrated loyalty to the crown.[^1] The painting that is the subject of the case study depicts the second such occasion; a previous Durbar was held in 1877 to proclaim Queen Victoria Empress of India. Following Victoria’s death in 1901, the 1903 Durbar marked the declaration of Edward VII and Queen Alexandra as Emperor and Empress of India. Though the royal couple did not attend the ceremony, they were represented by Edward’s brother, the Duke of Connaught, seen riding on the second elephant in the scene.
 
 The viceroy, Lord Curzon, commissioned the Anglo-American artist Roderick MacKenzie (1865–1941) to paint the ceremonial procession. Lord Curzon is depicted seated on the elephant leading the procession in the painting. The entire event culminated in a grand coronation ball attended only by the highest-ranking guests and overseen by Lord Curzon and the stunning Lady Curzon in her glittering jewels and regal peacock gown.
 
