--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -53,7 +53,7 @@ The addition of relative humidity (RH) fluctuations in ([fig. 2.4](#fig-2-4)) hi
 
 #### *Time-temperature superposition*
 
-Over a wide range of test conditions, it is impractical to summarize tensile data from a viscoelastic material with stress-strain curves. It is also not feasible to measure the full relaxation behavior from glassy to rubbery—a process occurring over many decades—at one temperature, due to equipment limitations and time constraints. In ([fig. 2.1](#fig-2-1)), it is clear that a relationship exists between strain rate and temperature, since increasing the rate by an order of magnitude is equivalent to decreasing temperature by 10°C. This implies that time-temperature superposition (TTS) is a potential tool for efficiently summarizing data ({Williams, Landel, and Ferry 1955}). To illustrate this method, ([fig. 2.5a](#fig-2-5)) shows a simplified summary of modulus values at three temperatures and four strain rates within a practical test window. This test window is bounded by equipment limitations and practical time available for data collection. ([fig. 2.5b](#fig-2-5)) shows the result of fixing data at a chosen reference temperature, *T~ref~* = 20°C, and horizontally shifting data at the other temperatures to line up as a single master curve. The result shows a shift from glassy to rubbery behavior over a broader scale than the experiments allowed in direct measurement. Tabulated results of the horizontal shift factor versus temperature allow one to create a master curve at any *T~ref~* of interest within data limits. Defining *T~ref~* at the glass transition temperature, *T~g~*, would also allow comparison with theoretical functions, and possible extrapolation to temperatures beyond the test conditions. There are many reasons why the simple TTS method may not work for certain materials; however, it is a powerful tool when it does.
+Over a wide range of test conditions, it is impractical to summarize tensile data from a viscoelastic material with stress-strain curves. It is also not feasible to measure the full relaxation behavior from glassy to rubbery—a process occurring over many decades—at one temperature, due to equipment limitations and time constraints. In ([fig. 2.1](#fig-2-1)), it is clear that a relationship exists between strain rate and temperature, since increasing the rate by an order of magnitude is equivalent to decreasing temperature by 10°C. This implies that time-temperature superposition (TTS) is a potential tool for efficiently summarizing data ({% cite 'Williams, Landel, and Ferry 1955' %}). To illustrate this method, ([fig. 2.5a](#fig-2-5)) shows a simplified summary of modulus values at three temperatures and four strain rates within a practical test window. This test window is bounded by equipment limitations and practical time available for data collection. ([fig. 2.5b](#fig-2-5)) shows the result of fixing data at a chosen reference temperature, *T~ref~* = 20°C, and horizontally shifting data at the other temperatures to line up as a single master curve. The result shows a shift from glassy to rubbery behavior over a broader scale than the experiments allowed in direct measurement. Tabulated results of the horizontal shift factor versus temperature allow one to create a master curve at any *T~ref~* of interest within data limits. Defining *T~ref~* at the glass transition temperature, *T~g~*, would also allow comparison with theoretical functions, and possible extrapolation to temperatures beyond the test conditions. There are many reasons why the simple TTS method may not work for certain materials; however, it is a powerful tool when it does.
 
 {% figure 'fig-2-5' %}
 
@@ -73,7 +73,7 @@ Recent studies on artists paints have highlighted the application of this approa
 
 {% figure 'fig-2-7' %}
 
-This concept of a failure strain mastercurve is also shown in figure 2.8 using tensile data from two artists paint films at *T~ref~* = 20°C ({Hagan 2017}). The acrylic paint film ([fig. 2.8a](#fig-2-8)) shows a considerably larger combination of strains and strain rates that avoid failure compared to the oil paint ([fig. 2.8b](#fig-2-8)). This illustrates why cracking of acrylics latex paints is much less common than traditional oils over a wide range of conditions.
+This concept of a failure strain mastercurve is also shown in figure 2.8 using tensile data from two artists paint films at *T~ref~* = 20°C ({% cite 'Hagan 2017' %}). The acrylic paint film ([fig. 2.8a](#fig-2-8)) shows a considerably larger combination of strains and strain rates that avoid failure compared to the oil paint ([fig. 2.8b](#fig-2-8)). This illustrates why cracking of acrylics latex paints is much less common than traditional oils over a wide range of conditions.
 
 {% figure 'fig-2-8' %}
 
