--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -17,7 +17,7 @@ abstract: "Today the collection of the Neue Pinakothek in Munich comprises a col
 
 Publications offer us only a fragmentary understanding of developments in conservation. One such fragment is the plea to “do in future only that which is absolutely necessary, and if in doubt, do nothing at all—always heeding the fact that each intervention is in and of itself irreversible” ({% cite 'Weddigen 1980' '30' %}). This statement represents a shift witnessed in the field of paintings conservation in German-speaking countries around 1980.[^1] This new approach called into question the suitability of lining canvas paintings as the default method for treating many types of defects. As a result, lining was indeed largely replaced by less invasive alternatives in the following years. Retaining an artwork’s “untouched” condition, thus enabling later generations to uncover clues whose significance may not yet be understood, gained importance as a value in its own right.[^2] Around the same time, an occupational profile was developed for conservation-restoration that defined academic training as a future standard. Considering the treatment of canvas paintings, this change took place over years and—depending on the country—at different times, influenced by leading conservators and university teaching. Nowadays, more than a generation of German-speaking conservators see lining as an almost exclusively historical technique that is only taught to elucidate its various methods.
 
-At the 1974 international Conference on Comparative Lining Techniques in Greenwich, lining was not yet challenged per se; the focus was on improving materials and methods. While the exchange of ideas across language borders was still quite limited at this time,[^3]the impact of this conference is nevertheless visible in some German publications published thereafter.[^4] By the annual meeting of the Deutscher Restauratorenverband (German Association of Conservators-Restorers) in 1980, however, lining was fundamentally questioned and alternatives sought ({% cite 'von Manteuffel-Szoege 1980' %}). Here, probably for the first time in such an arena, thread-by-thread tear mending was presented ({% cite 'Gabler 1979' %}). In Switzerland, too, criticism was being leveled at traditional lining techniques under the caption “Gaining experience through failure” ({% cite 'Weddigen 1981' %}). Occasional discussions of improved lining methods followed,[^5] but from the 1990s onward it was all about tear mending with adhesives, and later stitching (see, for example, {% cite 'Heiber 1996' %} and {% cite 'Beltinger 1992' %}). In this context, retrospectives published in 1983 on the history of lining, marouflage, and paintings transfer assume an almost epitaphic quality ({Marty 1983}; {% cite 'Schaible 1983a' %}; {% cite 'Schaible 1983b' %}; {% cite 'Schiessl 1983' %}).
+At the 1974 international Conference on Comparative Lining Techniques in Greenwich, lining was not yet challenged per se; the focus was on improving materials and methods. While the exchange of ideas across language borders was still quite limited at this time,[^3]the impact of this conference is nevertheless visible in some German publications published thereafter.[^4] By the annual meeting of the Deutscher Restauratorenverband (German Association of Conservators-Restorers) in 1980, however, lining was fundamentally questioned and alternatives sought ({% cite 'von Manteuffel-Szoege 1980' %}). Here, probably for the first time in such an arena, thread-by-thread tear mending was presented ({% cite 'Gabler 1979' %}). In Switzerland, too, criticism was being leveled at traditional lining techniques under the caption “Gaining experience through failure” ({% cite 'Weddigen 1981' %}). Occasional discussions of improved lining methods followed,[^5] but from the 1990s onward it was all about tear mending with adhesives, and later stitching (see, for example, {% cite 'Heiber 1996' %} and {% cite 'Beltinger 1992' %}). In this context, retrospectives published in 1983 on the history of lining, marouflage, and paintings transfer assume an almost epitaphic quality ({% cite 'Marty 1983' %}; {% cite 'Schaible 1983a' %}; {% cite 'Schaible 1983b' %}; {% cite 'Schiessl 1983' %}).
 
 At a conservation conference in 1984, Winfried Heiber used a microscope linked to a projection screen to give a live demonstration of thread-by-thread tear mending.[^6] In his comprehensive description of the method published in 1996, Heiber noted in amazement that “an idea can quietly assert itself—with little to no publication, very modest practical instruction on the part of the protagonists, no indoctrination attempts and no divisive fundamental discussions” ({% cite 'Heiber 1996' '117' %}).
 
@@ -167,7 +167,7 @@ Great appreciation is due my teachers Winfried Heiber and Hans Brammer, who in d
 
 [^9]: *Paste* and *wax* are the usual collective terms, although mixtures were generally used, see note 12.
 
-[^10]: The first heated vacuum table was acquired in 1959 ({Wolters 1960}).
+[^10]: The first heated vacuum table was acquired in 1959 ({% cite 'Wolters 1960' %}).
 
 [^11]: Until the 1990s, the museum possessed veneer presses for paste lining.
 
